--- a/templates/footer.html
+++ b/templates/footer.html
@@ -22,7 +22,7 @@ function subst() {
             <meta charset="utf-8">
             <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,600,800,400italic,600italic,700italic,800italic,300,300italic' rel='stylesheet' type='text/css'>
     </head>
-    <body id="pdf-footer" onload="subst()">
+    <body id="pdf-footer" onload="subst()" style="font-family:Helvetica Neue,Helvetica,Arial,sans-serif;font-size:14px;">
             <footer>
             		<center>
             			Page <span class="page"></span> / <span class="topage"></span>
